--- a/2022-02-26-辞赋2.md
+++ b/2022-02-26-辞赋2.md
@@ -3,4 +3,10 @@
 各位同学好，今天我课程的主题是，浅谈辞赋。
 辞赋作为与诗词曲完全不同的文体，从数千年前屈原的离骚开始演进，蜿蜒曲折地穿插着中国古代史。相较于诗词，它的与众不同之处是体量更加庞大，可以从数十字的小赋到洋洋数万字的大赋。并且语言相比诗词更少一些拘束，相对于被格律和词牌束缚的诗词多出了更多的自由，但与此同时也并没有牺牲它的韵律之美。今天将讨论的话题是，其一是辞赋在内容上的不同，其二是辞赋在我们生活中可能的应用，最后是我个人对于辞赋的体验。
 
-辞赋语言的特点是更加自由。相比诗词曲对格律、词牌、曲牌的束缚，辞赋作者唯一需要注意的地方就是文字的对仗工整，譬如王勃的滕王阁序中，交替使用的四言，七言，甚至混杂四言七言的对仗诗句(遥襟甫畅，逸兴遄飞。爽籁发而清风生，纤歌凝而白云遏。睢园绿竹，气凌彭泽之樽；邺水朱华，光照临川之笔).在其他方面就没有什么具体的限制了，。这导致在内容上出现一个后果，就是在谈论一个主题方面，辞赋可以比诗词曲描写的更加详尽。比如关于主题“风”，唐代诗人李峤的诗歌如下：解落三秋叶，能开二月花。过江千尺浪，入竹万竿斜。这首诗从风能落叶，能开花，能起浪，能吹斜竹子四个特点入手来描写。固然体现了唐诗短小精炼的特质，但并未对“风”这个主题从其他角度进行感受，比如，这首唐诗很难同时描写风从哪里来，风到哪里去，风对花草的影响等诸多话题。而这些话题在战国时期宋玉的辞赋《风赋》中得到了详尽的描写。同理，对于主题“雪”，诗词不可否任存在诸多佳作，比如唐诗中有祖永的《终南望馀雪》，刘长卿的《逢雪宿芙蓉山主人》，在宋词中有姜夔的《暗香》，李清照的《清平乐》，单论意境和语言上已经处在诗词中的精英翘楚。但是如果论
+辞赋语言的特点是更加自由。相比诗词曲对格律、词牌、曲牌的束缚，辞赋作者唯一需要注意的地方就是文字的对仗工整，譬如王勃的滕王阁序中，交替使用的四言，七言，甚至混杂四言七言的对仗诗句(遥襟甫畅，逸兴遄飞。爽籁发而清风生，纤歌凝而白云遏。睢园绿竹，气凌彭泽之樽；邺水朱华，光照临川之笔).在其他方面就没有什么具体的限制了，。这导致在内容上出现一个后果，就是在谈论一个主题方面，辞赋可以比诗词曲描写的更加详尽。比如关于主题“风”，唐代诗人李峤的诗歌如下：解落三秋叶，能开二月花。过江千尺浪，入竹万竿斜。这首诗从风能落叶，能开花，能起浪，能吹斜竹子四个特点入手来描写。固然体现了唐诗短小精炼的特质，但并未对“风”这个主题从其他角度进行感受，比如，这首唐诗很难同时描写风从哪里来，风到哪里去，风对花草的影响等诸多话题。而这些话题在战国时期宋玉的辞赋《风赋》中得到了详尽的描写。同理，对于主题“雪”，诗词不可否任存在诸多佳作，比如唐诗中有祖永的《终南望馀雪》，刘长卿的《逢雪宿芙蓉山主人》，在宋词中有姜夔的《暗香》，李清照的《清平乐》，单论意境和语言上已经处在诗词中的精英翘楚。但是如果论内容的充实程度，对景物描写的透彻程度，情感抒发的淋漓程度，诗词对于辞赋着实望尘莫及。谢惠连在《雪赋》中除了诗词中对降雪场景的描写之外，有对雪历史感的描写(...)，有对想象中降雪场景的描写，也有对人沉浸雪色时精神世界的描写。在内容的充实程度上来说，辞赋本为此而生，所以胜过诗词也是并不奇怪的事情。如果你相对一个主题有更加透彻的理解感受，辞赋正趴在书上等着你。
+
+第二个论题是辞赋的应用。其实这句话挺奇怪的，辞赋怎能够应用呢。我这里说的应用特指辞赋对你我生活的融入，就像我数学课期末考试前会默念”我命绝次日，魂去尸长留“一样。辞赋和诗词虽然在字数，思考方式上存在不同，但总的来说，辞赋无非是篇幅更加长的诗罢了。而且辞赋在因为对格律的束缚更小，在某些领域拥有意向不到的优势。比如舔狗给女神男神表白，唐诗中能借鉴的东西似乎没有，毕竟”诗以言志“，当然”青山一道同云雨“之类描写社会主义兄弟情的不算。宋词中倒有几句柳永或周邦彦的词句可以成功率，但好像看起来不太直接。但是在辞赋中，可以拿来的东西多了去了。比如陶渊明的《闲情赋》中”愿在昼而为影，常依形而西东“太精妙的写出了我这种人追女神时的心情。同样是这种缠绵反侧的心情，用曹植在洛神赋的话说大概就是“思绵绵而增慕。夜耿耿而不寐”。当然在男女之事上一定是不能忘记屈原和宋玉的。追不到的悲伤就是屈原《九章·悲回风》中的“悲霜雪之俱下兮，听潮水之相击。”，没有希望却又不死心大概可以用宋玉《九辩》中“愿徼幸而有待兮，泊莽莽与野草同死。”来形容了。如果跳脱爱情呢？放完寒假，坐在来WKU的火车时，心情大概是“遡北风之憭慄，掩霏雪以遐徂”。如果你发现你单词还没背完，然而下个星期就要考托福了，那种感觉和“西风古寺，淹滞青燐，落日荒丘，零星白骨”的意境很像。我高三每次月考完之后，都会感到“天晦地冥，久同泉下，日暮途远，何意人间！”总而言之，辞赋是区别于诗词的另一个宇宙。如果你决定去探索这个世界，收获也许会超乎你的想象。
+
+我其实是从高中开始接触辞赋的。辞赋对于我来说无异是无聊的早自习的一味救命解药。我首先从楚辞中看到了数千年前先贤对孤独，和自然景物的深刻理解，又沿着时间的源流顺流而下，在洋洋洒洒却又言之无物汉赋中，看见了当时人们对包罗万象的稚拙尝试，他们应该和17世纪时编撰大英百科全书的人拥有一样的憧憬吧。魏晋乱世之中，辞赋更多体现出了对命运的悲悯和对苦难的深刻经历。唐宋两朝的赋中，士人似乎都沉浸在自己的小天地之中，过着悠闲自在的小日子。当时间快进到明清之交，反抗的意志和河山沦陷的悲痛使得那个时期的赋读起来惊心动魄，在我高中时洗澡或是发呆的时候那些悲壮的话语往往涌上心头，类似于被网络神曲洗脑后的单曲循环。阅读辞赋究竟有什么意义？大概也像攀登珠穆朗玛峰的原因，因为山就在那里。如果我从未看过辞赋，我不能从飘扬的雪花中提取出廓落悲凉的美丽，不能从高中孤独的生活中获取千年前先人给予我的珍贵同情，不能在虚拟的辞赋世界中提取超越尘世的高贵和勇气。当字数越来越增加的时候，诗词更像是文化人之间的游戏，而赋中却更有真性情。
+
+我的分享结束，感谢各位。
