second-tea-lesson

--- a/2022-02-26-辞赋2.md
+++ b/2022-02-26-辞赋2.md
@@ -9,4 +9,4 @@
 
 我其实是从高中开始接触辞赋的。辞赋对于我来说无异是无聊的早自习的一味救命解药。我首先从楚辞中看到了数千年前先贤对孤独，和自然景物的深刻理解，又沿着时间的源流顺流而下，在洋洋洒洒却又言之无物汉赋中，看见了当时人们对包罗万象的稚拙尝试，他们应该和17世纪时编撰大英百科全书的人拥有一样的憧憬吧。魏晋乱世之中，辞赋更多体现出了对命运的悲悯和对苦难的深刻经历。唐宋两朝的赋中，士人似乎都沉浸在自己的小天地之中，过着悠闲自在的小日子。当时间快进到明清之交，反抗的意志和河山沦陷的悲痛使得那个时期的赋读起来惊心动魄，在我高中时洗澡或是发呆的时候那些悲壮的话语往往涌上心头，类似于被网络神曲洗脑后的单曲循环。阅读辞赋究竟有什么意义？大概也像攀登珠穆朗玛峰的原因，因为山就在那里。如果我从未看过辞赋，我不能从飘扬的雪花中提取出廓落悲凉的美丽，不能从高中孤独的生活中获取千年前先人给予我的珍贵同情，不能在虚拟的辞赋世界中提取超越尘世的高贵和勇气。当字数越来越增加的时候，诗词更像是文化人之间的游戏，而赋中却更有真性情。
 
-我的分享结束，感谢各位。
+我的分享结束，感谢各位，溜。
